Added featured projects section and updated product layout

--- a/index.html
+++ b/index.html
@@ -53,6 +53,50 @@
       </p>
     </div>
   </section>
+  <!-- === FEATURED PROJECTS === -->
+  <section class="reveal" style="padding: 80px 20px; background: #fff;">
+    <div class="container" style="max-width: 1100px; margin: auto;">
+      <h2 class="section-title">⚡ Featured Projects</h2>
+      <div class="product-cards" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 30px; margin-top: 40px;">
+
+        <!-- RabbitBook -->
+        <div class="card reveal">
+          <h3>🐇 RabbitBook</h3>
+          <p>Lightning-fast Python IDE with syntax highlight, offline-ready, distraction-free.</p>
+          <a href="https://atharvpuri.github.io/RabbitBook/" target="_blank" class="btn-small">Launch</a>
+        </div>
+
+        <!-- SudoRig -->
+        <div class="card reveal">
+          <h3>🛠️ SudoRig</h3>
+          <p>No-nonsense terminal-style toolkit for power users. Fast diagnostics & tools.</p>
+          <a href="https://atharvpuri.github.io/SudoRig/" target="_blank" class="btn-small">open SudoRig</a>
+        </div>
+
+        <!-- AdlerShell -->
+        <div class="card reveal">
+          <h3>🛡️ AdlerShell</h3>
+          <p>Sleek terminal emulator made for ethical hackers. Lightweight and badass.</p>
+          <a href="https://github.com/atharvpuri/AdlerShell" target="_blank" class="btn-small">Download</a>
+        </div>
+
+        <!-- WilfTrack -->
+        <div class="card reveal">
+          <h3>🎯 WilfTrack</h3>
+          <p>Real-time pose detection with OpenCV + Python. Made for ML creators.</p>
+          <a href="https://github.com/atharvpuri/wilftrack" target="_blank" class="btn-small">Try It</a>
+        </div>
+
+        <!-- Falcon Browser -->
+        <div class="card reveal">
+          <h3>🦅 Falcon Browser</h3>
+          <p>Privacy-first, ad-free browser built for speed. Now with tab control + MP3 sync.</p>
+          <a href="https://github.com/atharvpuri/FalconBrowser/releases/tag/versionsecond" target="_blank" class="btn-small">Download</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <!-- === CTA === -->
   <section class="reveal" style="padding: 100px 20px; background: #f4f6ff;">
