--- a/products.html
+++ b/products.html
@@ -33,90 +33,84 @@
         <!-- AdlerShell -->
         <div class="card reveal">
           <h3>🛡️ AdlerShell</h3>
-          <p>
-            A sleek terminal emulator for ethical hackers and power users. Lightweight, portable, and badass.
-          </p>
+          <p>A sleek terminal emulator for ethical hackers and power users. Lightweight, portable, and badass.</p>
           <a href="https://github.com/atharvpuri/AdlerShell" target="_blank" class="btn-small">Download on GitHub</a>
+        </div>
+
+        <!-- RabbitBook -->
+        <div class="card reveal">
+          <h3>🐇 RabbitBook</h3>
+          <p>A lightning-fast Python IDE built for minimalists. Syntax highlighting, fast execution, offline-ready.</p>
+          <a href="https://atharvpuri.github.io/RabbitBook/" class="btn-small" target="_blank">Open RabbitBook</a>
+        </div>
+
+        <!-- SudoRig -->
+        <div class="card reveal">
+          <h3>🛠️ SudoRig</h3>
+          <p>Terminal-style utility toolkit. Cybersecurity learning portal  .</p>
+          <a href="https://atharvpuri.github.io/SudoRig/" class="btn-small" target="_blank">Launch SudoRig</a>
         </div>
 
         <!-- WilfTrack -->
         <div class="card reveal">
           <h3>🎯 WilfTrack (Pose Tracker)</h3>
-          <p>
-            AI-based pose detection system for real-time tracking. OpenCV + Python magic for ML lovers.
-          </p>
+          <p>AI-based pose detection system for real-time tracking. OpenCV + Python magic for ML lovers.</p>
           <a href="https://github.com/atharvpuri/wilftrack" target="_blank" class="btn-small">Download on GitHub</a>
         </div>
 
         <!-- CSE200 -->
         <div class="card reveal">
           <h3>📊 CSE200 Project Toolkit</h3>
-          <p>
-            A full data mining project package with classification models like DT, KNN & clustering. Plug-n-code.
-          </p>
+          <p>Data mining package with classification models like DT, KNN & clustering. Plug-n-code ready.</p>
           <a href="https://github.com/atharvpuri/CSE200" target="_blank" class="btn-small">Download on GitHub</a>
         </div>
 
         <!-- Cricket Overlay App -->
         <div class="card reveal">
           <h3>🏏 Cricket Overlay App</h3>
-          <p>
-            Bring pro-level score overlays to your cricket streams. Made for OBS & YouTube creators.
-          </p>
+          <p>Pro-level score overlays for your cricket livestreams. Built for OBS & YouTube creators.</p>
           <a href="https://github.com/atharvpuri/CricketOverlayApp" target="_blank" class="btn-small">Download on GitHub</a>
         </div>
 
         <!-- Falcon Browser -->
         <div class="card reveal">
           <h3>🦅 Falcon Browser v2.5</h3>
-          <p>
-            A blazing fast, privacy-first web browser built from scratch. Feather-light, ad-free, and built for raw performance. Now updated with advanced tab controls and MP3 sync.
-          </p>
+          <p>Privacy-first, ad-free web browser with speed. Updated tabs, MP3 sync. Clean, raw, powerful.</p>
           <a href="https://github.com/atharvpuri/FalconBrowser/releases/tag/versionsecond" target="_blank" class="btn-small">Download on GitHub</a>
         </div>
 
         <!-- Nova OS -->
         <div class="card reveal">
           <h3>💻 Nova OS (Prototype)</h3>
-          <p>
-            A fresh take on operating systems — NovaOS is a design-first prototype exploring futuristic UI, smooth boot-up flow, and modular control over system functions.
-          </p>
+          <p>Design-first OS prototype — futuristic UI, smooth boot-ups, modular system control.</p>
           <a href="https://github.com/atharvpuri/NovaOs" target="_blank" class="btn-small">View Prototype</a>
         </div>
 
         <!-- LeanTortoise Antivirus -->
         <div class="card reveal">
           <h3>🦠 LeanTortoise Antivirus</h3>
-          <p>
-            A lightweight, fast antivirus scanner that eats malware for breakfast. Built for efficiency, privacy, and offline scanning — no bloat, just protection.
-          </p>
+          <p>Offline-friendly malware killer. Lightweight, private, bloat-free. Built for efficiency.</p>
           <a href="https://github.com/atharvpuri/Leantortoise" target="_blank" class="btn-small">Download on GitHub</a>
         </div>
 
         <!-- Criqxa -->
         <div class="card reveal">
           <h3>🏏 Criqxa – Cricket Social Platform</h3>
-          <p>
-            A dedicated social media app for cricket fans. Follow matches, post hot takes, engage in fan battles, and live the cricket craze 24/7. Built by fans, for fans.
-          </p>
+          <p>Social media for cricket lovers. Post takes, follow games, argue like a fan. Built by fans.</p>
           <a href="https://github.com/atharvpuri/criqxa" target="_blank" class="btn-small">Check it on GitHub</a>
         </div>
 
         <!-- BitterBot -->
         <div class="card reveal">
           <h3>🤖 BitterBot</h3>
-          <p>
-            A bot built to simulate uptime monitors like UptimeRobot — lets users input target links and keeps pinging them in set intervals. Made for automation nerds.
-          </p>
+          <p>Custom uptime bot simulator. Input links, ping them on loop, no external dependencies needed.</p>
           <a href="https://github.com/atharvpuri/bitterbot-frontend" target="_blank" class="btn-small">Download on GitHub</a>
         </div>
 
         <!-- MilesAhead -->
         <div class="card reveal">
           <h3>🕶️ MilesAhead – Anonymous Chat App</h3>
-          <p>
-            A minimal, anonymous chat platform designed for private convos with zero data tracking. Simple, clean, and straight to the point.
-          </p>
+          <p>Private chat app with zero tracking. Anonymous, fast, and no signups. Just talk.</p>
           <a href="https://github.com/atharvpuri/milesahead" target="_blank" class="btn-small">Visit on GitHub</a>
         </div>
 
